--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "prisma generate && nuxt build && prisma db push",
+    "build": "prisma generate && nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
@@ -15,38 +15,39 @@
   },
   "dependencies": {
     "@auth/core": "^0.17.0",
-    "@auth/prisma-adapter": "^1.5.0",
+    "@auth/prisma-adapter": "^1.5.2",
     "@hebilicious/authjs-nuxt": "^0.3.5",
     "@prisma/adapter-d1": "^5.12.0",
-    "@prisma/client": "^5.11.0",
+    "@prisma/client": "^5.12.0",
     "@radix-icons/vue": "^1.0.0",
     "@vueuse/core": "^10.9.0",
     "class-variance-authority": "^0.7.0",
     "cookie": "^0.6.0",
     "lucide-vue-next": "^0.344.0",
     "luxon": "^3.4.4",
-    "radix-vue": "^1.5.3",
+    "radix-vue": "^1.6.1",
     "sqlite3": "^5.1.7",
     "tailwind-merge": "^2.2.2",
     "tinycolor2": "^1.6.0",
     "vaul-vue": "^0.1.0",
     "vue": "^3.4.19",
     "vue-router": "^4.3.0",
-    "vue-sonner": "^1.1.2"
+    "vue-sonner": "^1.1.2",
+    "wrangler": "^3.44.0"
   },
   "devDependencies": {
-    "@nuxtjs/i18n": "^8.2.0",
+    "@nuxtjs/i18n": "^8.3.0",
     "@nuxtjs/tailwindcss": "^6.11.4",
-    "@rushstack/eslint-patch": "^1.8.0",
+    "@rushstack/eslint-patch": "^1.10.1",
     "@vue/eslint-config-standard": "^8.0.1",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.4.0",
     "eslint": "^8.57.0",
     "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-vue": "^9.23.0",
+    "eslint-plugin-vue": "^9.24.0",
     "nuxt": "^3.11.1",
-    "prisma": "^5.11.0",
-    "tailwindcss": "^3.4.1",
+    "prisma": "^5.12.0",
+    "tailwindcss": "^3.4.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.4.3"
   },
