--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "nuxt build",
-    "deploy": "npx wrangler pages deploy",
     "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
+    "build": "nuxt build",
+    "preview": "npx wrangler pages dev",
+    "deploy": "npx wrangler pages deploy",
     "drizzle:generate": "drizzle-kit generate:sqlite",
     "drizzle:migrate:local": "wrangler d1 migrations apply foosball --local",
     "drizzle:migrate:prod": "wrangler d1 migrations apply foosball"
